--- a/doceditor/languages/lazde.hu.po
+++ b/doceditor/languages/lazde.hu.po
@@ -27,10 +27,6 @@ msgstr "Összes hozzáadása"
 msgid "Select a new description file"
 msgstr "Új leírásfájl választása"
 
-#: lazdemsg.sadditionalparams
-msgid "Additional parameters for fpdoc"
-msgstr "További paraméterek az fpdoc számára"
-
 #: lazdemsg.sbuild
 msgctxt "lazdemsg.sbuild"
 msgid "&Build"
@@ -166,7 +162,9 @@ msgid " in package "
 msgstr " a csomagban "
 
 #: lazdemsg.sfortopic
-msgid " in topic "
+#, fuzzy
+#| msgid " in topic "
+msgid " in topic"
 msgstr " a témában "
 
 #: lazdemsg.shideprotectedmethods
@@ -230,11 +228,6 @@ msgstr "Aláhúzás"
 msgid "Variable"
 msgstr "Változó"
 
-#: lazdemsg.shintinsertbulletedlist
-msgctxt "lazdemsg.shintinsertbulletedlist"
-msgid "Insert bulleted list"
-msgstr "Listajeles felsorolás beszúrása"
-
 #: lazdemsg.shintinsertelement
 msgctxt "lazdemsg.shintinsertelement"
 msgid "New element"
@@ -249,11 +242,6 @@ msgstr "Link beszúrása"
 msgctxt "lazdemsg.shintinsertmodule"
 msgid "New module"
 msgstr "Új modul"
-
-#: lazdemsg.shintinsertnumberedlist
-msgctxt "lazdemsg.shintinsertnumberedlist"
-msgid "Insert numbered list"
-msgstr "Számozott lista beszúrása"
 
 #: lazdemsg.shintinsertpackage
 msgctxt "lazdemsg.shintinsertpackage"
@@ -303,24 +291,10 @@ msgstr "E program névjegye"
 msgid "Import content file"
 msgstr "Tartalomfájl importálása"
 
-#: lazdemsg.sinsertbulletedlist
-msgctxt "lazdemsg.sinsertbulletedlist"
-msgid "Insert bulleted list"
-msgstr "Listajeles felsorolás beszúrása"
-
-#: lazdemsg.sinsertexamplecode
-msgid "Insert example code"
-msgstr "Példakód beszúrása"
-
 #: lazdemsg.sinsertlink
 msgctxt "lazdemsg.sinsertlink"
 msgid "Insert link"
 msgstr "Link beszúrása"
-
-#: lazdemsg.sinsertnumberedlist
-msgctxt "lazdemsg.sinsertnumberedlist"
-msgid "Insert numbered list"
-msgstr "Számozott lista beszúrása"
 
 #: lazdemsg.sinsertprintshortlink
 msgid "Insert short description link"
@@ -338,14 +312,6 @@ msgstr "Lazarus Dokumentáció Szerkesztő"
 #: lazdemsg.slinksto
 msgid " links to "
 msgstr " erre hivatkozik: "
-
-#: lazdemsg.slinktarget
-msgid "Link target"
-msgstr "Hivatkozás célja"
-
-#: lazdemsg.slinktext
-msgid "Link text"
-msgstr "Hivatkozás szövege"
 
 #: lazdemsg.sload
 msgid "&Load"
@@ -473,11 +439,6 @@ msgstr "Névjegy ..."
 msgid "&Insert"
 msgstr "&Beszúrás"
 
-#: lazdemsg.smenuinsertbulletedlist
-msgctxt "lazdemsg.smenuinsertbulletedlist"
-msgid "Bulleted list"
-msgstr "Listajeles felsorolás"
-
 #: lazdemsg.smenuinsertelement
 msgid "&Element"
 msgstr "Elem"
@@ -486,18 +447,9 @@ msgstr "Elem"
 msgid "&Link"
 msgstr "Hivatkozás"
 
-#: lazdemsg.smenuinsertlist
-msgid "List"
-msgstr "Lista"
-
 #: lazdemsg.smenuinsertmodule
 msgid "&Module"
 msgstr "Modul"
-
-#: lazdemsg.smenuinsertnumberedlist
-msgctxt "lazdemsg.smenuinsertnumberedlist"
-msgid "Numbered list"
-msgstr "Számozott lista"
 
 #: lazdemsg.smenuinsertpackage
 msgctxt "lazdemsg.smenuinsertpackage"
@@ -564,10 +516,6 @@ msgstr "Új csomag"
 msgctxt "lazdemsg.snewtopic"
 msgid "New topic"
 msgstr "Új téma"
-
-#: lazdemsg.snodename
-msgid "Node name"
-msgstr "Csomópont neve"
 
 #: lazdemsg.snoelement
 msgid "No element selected"
@@ -667,10 +615,6 @@ msgctxt "lazdemsg.ssave"
 msgid "&Save"
 msgstr "&Mentés"
 
-#: lazdemsg.ssavebeforebuildquestion
-msgid "You have unsaved changes in \"%s\".%sThey should be saved in order to be visible in built documentation. Save them?"
-msgstr "Nem mentett változtatások ebben: \"%s\".%sMenteni kell őket, hogy láthatóak legyenek az épített dokumentációban. Mentés?"
-
 #: lazdemsg.sseealso
 msgid "See Also"
 msgstr "Lásd még"
@@ -710,18 +654,6 @@ msgstr "Források"
 #: lazdemsg.sstartnodenotfound
 msgid "Start element \"%s\" could not be found"
 msgstr "A kezdő elem nem található: \"%s\""
-
-#: lazdemsg.stablecols
-msgid "Columns"
-msgstr "Oszlopok"
-
-#: lazdemsg.stableheader
-msgid "Use header row"
-msgstr "Fejlécsor használata"
-
-#: lazdemsg.stablerows
-msgid "Rows"
-msgstr "Sorok"
 
 #: lazdemsg.stargetos
 msgid "Target OS"
