--- a/doceditor/languages/lazde.pt_BR.po
+++ b/doceditor/languages/lazde.pt_BR.po
@@ -26,10 +26,6 @@ msgstr "Adicionar tudo"
 msgid "Select a new description file"
 msgstr "Selecionae um novo arquivo descrição"
 
-#: lazdemsg.sadditionalparams
-msgid "Additional parameters for fpdoc"
-msgstr "Parâmetros adicionais para fpdoc"
-
 #: lazdemsg.sbuild
 msgctxt "lazdemsg.sbuild"
 msgid "&Build"
@@ -165,8 +161,9 @@ msgid " in package "
 msgstr "no pacote"
 
 #: lazdemsg.sfortopic
-#| msgid " in topic"
-msgid " in topic "
+#, fuzzy
+#| msgid " in topic "
+msgid " in topic"
 msgstr " no tópico"
 
 #: lazdemsg.shideprotectedmethods
@@ -230,11 +227,6 @@ msgstr "Sublinhado"
 msgid "Variable"
 msgstr "Variável"
 
-#: lazdemsg.shintinsertbulletedlist
-msgctxt "lazdemsg.shintinsertbulletedlist"
-msgid "Insert bulleted list"
-msgstr "Inserir lista com marcadores"
-
 #: lazdemsg.shintinsertelement
 msgctxt "lazdemsg.shintinsertelement"
 msgid "New element"
@@ -249,11 +241,6 @@ msgstr "Inserir vínculo"
 msgctxt "lazdemsg.shintinsertmodule"
 msgid "New module"
 msgstr "Novo módulo"
-
-#: lazdemsg.shintinsertnumberedlist
-msgctxt "lazdemsg.shintinsertnumberedlist"
-msgid "Insert numbered list"
-msgstr "Inserir lista numerada"
 
 #: lazdemsg.shintinsertpackage
 msgctxt "lazdemsg.shintinsertpackage"
@@ -304,24 +291,10 @@ msgstr "Sobre este programa"
 msgid "Import content file"
 msgstr "Importar arquivo conteúdo"
 
-#: lazdemsg.sinsertbulletedlist
-msgctxt "lazdemsg.sinsertbulletedlist"
-msgid "Insert bulleted list"
-msgstr "Inserir lista com marcadores"
-
-#: lazdemsg.sinsertexamplecode
-msgid "Insert example code"
-msgstr "Inserir código de exemplo"
-
 #: lazdemsg.sinsertlink
 msgctxt "lazdemsg.sinsertlink"
 msgid "Insert link"
 msgstr "Inserir vínculo"
-
-#: lazdemsg.sinsertnumberedlist
-msgctxt "lazdemsg.sinsertnumberedlist"
-msgid "Insert numbered list"
-msgstr "Inserir lista numerada"
 
 #: lazdemsg.sinsertprintshortlink
 msgid "Insert short description link"
@@ -339,14 +312,6 @@ msgstr "Editor Documentação Lazarus"
 #: lazdemsg.slinksto
 msgid " links to "
 msgstr " vinculado à"
-
-#: lazdemsg.slinktarget
-msgid "Link target"
-msgstr "Vincular alvo"
-
-#: lazdemsg.slinktext
-msgid "Link text"
-msgstr "Vincular texto"
 
 #: lazdemsg.sload
 msgid "&Load"
@@ -475,11 +440,6 @@ msgstr "&Sobre ..."
 msgid "&Insert"
 msgstr "&Inserir"
 
-#: lazdemsg.smenuinsertbulletedlist
-msgctxt "lazdemsg.smenuinsertbulletedlist"
-msgid "Bulleted list"
-msgstr "Lista com marcadores"
-
 #: lazdemsg.smenuinsertelement
 msgid "&Element"
 msgstr "&Elemento"
@@ -488,18 +448,9 @@ msgstr "&Elemento"
 msgid "&Link"
 msgstr "&Vínculo"
 
-#: lazdemsg.smenuinsertlist
-msgid "List"
-msgstr "Lista"
-
 #: lazdemsg.smenuinsertmodule
 msgid "&Module"
 msgstr "&Módulo"
-
-#: lazdemsg.smenuinsertnumberedlist
-msgctxt "lazdemsg.smenuinsertnumberedlist"
-msgid "Numbered list"
-msgstr "Lista numerada"
 
 #: lazdemsg.smenuinsertpackage
 msgctxt "lazdemsg.smenuinsertpackage"
@@ -566,10 +517,6 @@ msgstr "Novo pacote"
 msgctxt "lazdemsg.snewtopic"
 msgid "New topic"
 msgstr "Novo tópico"
-
-#: lazdemsg.snodename
-msgid "Node name"
-msgstr "Nome do nó"
 
 #: lazdemsg.snoelement
 msgid "No element selected"
@@ -669,10 +616,6 @@ msgctxt "lazdemsg.ssave"
 msgid "&Save"
 msgstr "&Salvar"
 
-#: lazdemsg.ssavebeforebuildquestion
-msgid "You have unsaved changes in \"%s\".%sThey should be saved in order to be visible in built documentation. Save them?"
-msgstr "Você tem alterações não salvas em  \"%s\".%sElas devem ser salvas de maneira a serem visíveis na documentação construída. Salvar?"
-
 #: lazdemsg.sseealso
 msgid "See Also"
 msgstr "Veja Também"
@@ -712,18 +655,6 @@ msgstr "Fontes"
 #: lazdemsg.sstartnodenotfound
 msgid "Start element \"%s\" could not be found"
 msgstr "Elemento inicial \"%s\" não encontrado"
-
-#: lazdemsg.stablecols
-msgid "Columns"
-msgstr "Colunas"
-
-#: lazdemsg.stableheader
-msgid "Use header row"
-msgstr "Usar linha de cabeçalho"
-
-#: lazdemsg.stablerows
-msgid "Rows"
-msgstr "Linhas"
 
 #: lazdemsg.stargetos
 msgid "Target OS"
