--- a/components/onlinepackagemanager/languages/opkman_const.ru.po
+++ b/components/onlinepackagemanager/languages/opkman_const.ru.po
@@ -1100,191 +1100,139 @@ msgid "Cryptography"
 msgstr "Криптография"
 
 #: opkman_const.rsmainfrm_vsttext_packagecategory10
-#, fuzzy
-#| msgid "Indicators and Gauges"
 msgctxt "opkman_const.rsmainfrm_vsttext_packagecategory10"
 msgid "Grids"
-msgstr "Индикаторы и указатели"
+msgstr "Таблицы"
 
 #: opkman_const.rsmainfrm_vsttext_packagecategory11
-#, fuzzy
-#| msgid "Labels"
 msgctxt "opkman_const.rsmainfrm_vsttext_packagecategory11"
 msgid "Indicators and Gauges"
-msgstr "Метки"
+msgstr "Индикаторы и указатели"
 
 #: opkman_const.rsmainfrm_vsttext_packagecategory12
-#, fuzzy
-#| msgid "LazIDEPlugins"
 msgctxt "opkman_const.rsmainfrm_vsttext_packagecategory12"
 msgid "Labels"
-msgstr "Плагины Lazarus IDE"
+msgstr "Метки"
 
 #: opkman_const.rsmainfrm_vsttext_packagecategory13
-#, fuzzy
-#| msgid "List and Combo Boxes"
 msgctxt "opkman_const.rsmainfrm_vsttext_packagecategory13"
 msgid "LazIDEPlugins"
-msgstr "Списки"
+msgstr "Плагины Lazarus IDE"
 
 #: opkman_const.rsmainfrm_vsttext_packagecategory14
-#, fuzzy
-#| msgid "ListViews and TreeViews"
 msgctxt "opkman_const.rsmainfrm_vsttext_packagecategory14"
 msgid "List and Combo Boxes"
-msgstr "ListView и TreeView"
+msgstr "Списки"
 
 #: opkman_const.rsmainfrm_vsttext_packagecategory15
-#, fuzzy
-#| msgid "Menus"
 msgctxt "opkman_const.rsmainfrm_vsttext_packagecategory15"
 msgid "ListViews and TreeViews"
-msgstr "Меню"
+msgstr "ListView и TreeView"
 
 #: opkman_const.rsmainfrm_vsttext_packagecategory16
-#, fuzzy
-#| msgid "Multimedia"
 msgctxt "opkman_const.rsmainfrm_vsttext_packagecategory16"
 msgid "Menus"
-msgstr "Мультимедиа"
+msgstr "Меню"
 
 #: opkman_const.rsmainfrm_vsttext_packagecategory17
-#, fuzzy
-#| msgid "Networking"
 msgctxt "opkman_const.rsmainfrm_vsttext_packagecategory17"
 msgid "Multimedia"
-msgstr "Сеть"
+msgstr "Мультимедиа"
 
 #: opkman_const.rsmainfrm_vsttext_packagecategory18
-#, fuzzy
-#| msgid "Panels"
 msgctxt "opkman_const.rsmainfrm_vsttext_packagecategory18"
 msgid "Networking"
-msgstr "Панели"
+msgstr "Сеть"
 
 #: opkman_const.rsmainfrm_vsttext_packagecategory19
-#, fuzzy
-#| msgid "Reporting"
 msgctxt "opkman_const.rsmainfrm_vsttext_packagecategory19"
 msgid "Panels"
-msgstr "Отчёты"
+msgstr "Панели"
 
 #: opkman_const.rsmainfrm_vsttext_packagecategory2
-#, fuzzy
-#| msgid "DataControls"
 msgctxt "opkman_const.rsmainfrm_vsttext_packagecategory2"
 msgid "Database"
-msgstr "Данные"
+msgstr "Базы данных"
 
 #: opkman_const.rsmainfrm_vsttext_packagecategory20
-#, fuzzy
-#| msgid "Science"
 msgctxt "opkman_const.rsmainfrm_vsttext_packagecategory20"
 msgid "Reporting"
-msgstr "Наука"
+msgstr "Отчёты"
 
 #: opkman_const.rsmainfrm_vsttext_packagecategory21
-#, fuzzy
-#| msgid "Security"
 msgctxt "opkman_const.rsmainfrm_vsttext_packagecategory21"
 msgid "Science"
-msgstr "Безопасность"
+msgstr "Наука"
 
 #: opkman_const.rsmainfrm_vsttext_packagecategory22
-#, fuzzy
-#| msgid "Shapes"
 msgctxt "opkman_const.rsmainfrm_vsttext_packagecategory22"
 msgid "Security"
-msgstr "Фигуры"
+msgstr "Безопасность"
 
 #: opkman_const.rsmainfrm_vsttext_packagecategory23
-#, fuzzy
-#| msgid "Sizers and Scrollers"
 msgctxt "opkman_const.rsmainfrm_vsttext_packagecategory23"
 msgid "Shapes"
-msgstr "Размер и прокрутка"
+msgstr "Фигуры"
 
 #: opkman_const.rsmainfrm_vsttext_packagecategory24
-#, fuzzy
-#| msgid "System"
 msgctxt "opkman_const.rsmainfrm_vsttext_packagecategory24"
 msgid "Sizers and Scrollers"
-msgstr "Система"
+msgstr "Размер и прокрутка"
 
 #: opkman_const.rsmainfrm_vsttext_packagecategory25
-#, fuzzy
-#| msgid "Tabbed Components"
 msgctxt "opkman_const.rsmainfrm_vsttext_packagecategory25"
 msgid "System"
-msgstr "Компоненты со вкладками"
+msgstr "Система"
 
 #: opkman_const.rsmainfrm_vsttext_packagecategory26
-#, fuzzy
-#| msgid "Other"
 msgctxt "opkman_const.rsmainfrm_vsttext_packagecategory26"
 msgid "Tabbed Components"
-msgstr "Прочее"
+msgstr "Компоненты со вкладками"
 
 #: opkman_const.rsmainfrm_vsttext_packagecategory27
-#, fuzzy
-#| msgid "Games and Game Engines"
 msgctxt "opkman_const.rsmainfrm_vsttext_packagecategory27"
 msgid "Other"
-msgstr "Игровые движки и игры"
+msgstr "Прочее"
 
 #: opkman_const.rsmainfrm_vsttext_packagecategory28
 msgctxt "opkman_const.rsmainfrm_vsttext_packagecategory28"
 msgid "Games and Game Engines"
-msgstr ""
+msgstr "Игровые движки и игры"
 
 #: opkman_const.rsmainfrm_vsttext_packagecategory3
-#, fuzzy
-#| msgid "Date and Time"
 msgctxt "opkman_const.rsmainfrm_vsttext_packagecategory3"
 msgid "DataControls"
-msgstr "Дата и время"
+msgstr "Данные"
 
 #: opkman_const.rsmainfrm_vsttext_packagecategory4
-#, fuzzy
-#| msgid "Dialogs"
 msgctxt "opkman_const.rsmainfrm_vsttext_packagecategory4"
 msgid "Date and Time"
-msgstr "Диалоги"
+msgstr "Дата и время"
 
 #: opkman_const.rsmainfrm_vsttext_packagecategory5
-#, fuzzy
-#| msgid "Edit and Memos"
 msgctxt "opkman_const.rsmainfrm_vsttext_packagecategory5"
 msgid "Dialogs"
-msgstr "Поля ввода"
+msgstr "Диалоги"
 
 #: opkman_const.rsmainfrm_vsttext_packagecategory6
-#, fuzzy
-#| msgid "Files and Drives"
 msgctxt "opkman_const.rsmainfrm_vsttext_packagecategory6"
 msgid "Edit and Memos"
-msgstr "Файлы и накопители"
+msgstr "Поля ввода"
 
 #: opkman_const.rsmainfrm_vsttext_packagecategory7
-#, fuzzy
-#| msgid "GUIContainers"
 msgctxt "opkman_const.rsmainfrm_vsttext_packagecategory7"
 msgid "Files and Drives"
-msgstr "Компоненты-контейнеры"
+msgstr "Файлы и накопители"
 
 #: opkman_const.rsmainfrm_vsttext_packagecategory8
-#, fuzzy
-#| msgid "Graphics"
 msgctxt "opkman_const.rsmainfrm_vsttext_packagecategory8"
 msgid "GUIContainers"
-msgstr "Графика"
+msgstr "Компоненты-контейнеры"
 
 #: opkman_const.rsmainfrm_vsttext_packagecategory9
-#, fuzzy
-#| msgid "Grids"
 msgctxt "opkman_const.rsmainfrm_vsttext_packagecategory9"
 msgid "Graphics"
-msgstr "Таблицы"
+msgstr "Графика"
 
 #: opkman_const.rsmainfrm_vsttext_packageinfo
 msgid "Package info"
