--- a/components/synedit/languages/syneditstrconst.ru.po
+++ b/components/synedit/languages/syneditstrconst.ru.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: lazaruside\n"
 "POT-Creation-Date: \n"
-"PO-Revision-Date: 2025-07-24 16:22+0300\n"
+"PO-Revision-Date: 2025-12-11 22:54+0300\n"
 "Last-Translator: Maxim Ganetsky <maxkill@mail.ru>\n"
 "Language-Team: \n"
 "Language: ru\n"
@@ -73,7 +73,7 @@ msgstr "Символ"
 
 #: syneditstrconst.syns_attrcharset
 msgid "Charset"
-msgstr ""
+msgstr "Кодировка"
 
 #: syneditstrconst.syns_attrchunkmarker
 msgid "Diff Chunk Marker"
@@ -97,7 +97,7 @@ msgstr "Класс"
 
 #: syneditstrconst.syns_attrcollation
 msgid "Collation"
-msgstr ""
+msgstr "Порядок сортировки"
 
 #: syneditstrconst.syns_attrcomment
 msgid "Comment"
