--- a/languages/lazaruside.cs.po
+++ b/languages/lazaruside.cs.po
@@ -9425,7 +9425,7 @@ msgstr "Duplicitní Jednotka"
 #: lazarusidestrconsts.lisduplicateunitin
 #, object-pascal-format
 msgid "Duplicate unit \"%s\" in \"%s\""
-msgstr "Zdvojit jednotku \"%s\" v \"%s\""
+msgstr "Zdvojená jednotka \"%s\" v \"%s\""
 
 #: lazarusidestrconsts.lisdynpkgamounttoscrollin
 msgid "Amount to scroll in"
