--- a/languages/lazaruside.ru.po
+++ b/languages/lazaruside.ru.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: lazaruside\n"
 "POT-Creation-Date: \n"
-"PO-Revision-Date: 2025-12-21 22:44+0300\n"
+"PO-Revision-Date: 2025-12-31 23:16+0300\n"
 "Last-Translator: Maxim Ganetsky <maxkill@mail.ru>\n"
 "Language-Team: \n"
 "Language: ru\n"
@@ -1184,6 +1184,10 @@ msgstr "Применять за концом строки"
 #: lazarusidestrconsts.dlgcolorlink
 msgid "(Edit Color)"
 msgstr "(Изменить цвет)"
+
+#: lazarusidestrconsts.dlgcolorlink2
+msgid "(Color)"
+msgstr "(Цвет)"
 
 #: lazarusidestrconsts.dlgcolornotmodified
 msgid "Not modified"
@@ -3465,6 +3469,27 @@ msgstr "Использовать параметры по умолчанию Delp
 msgid "Use default Lazarus settings"
 msgstr "Использовать параметры по умолчанию Lazarus"
 
+#: lazarusidestrconsts.dlgoptautobracebevel
+msgid "Automatic completion of braces and quotes"
+msgstr "Автоматическое завершение скобок и кавычек"
+
+#: lazarusidestrconsts.dlgoptautobraceclose
+msgid "Skip over existing closing braces/quotes"
+msgstr "Пропускать уже имеющиеся закрывающие скобки/кавычки"
+
+#: lazarusidestrconsts.dlgoptautobracefilter
+msgctxt "lazarusidestrconsts.dlgoptautobracefilter"
+msgid "Filter"
+msgstr "Фильтр"
+
+#: lazarusidestrconsts.dlgoptautobracefilterhint
+msgid "Only act on listed braces/quotes. Tokens with more than one char must be space separated. Single char tokens can be non-separated, but only at the begin of the filter."
+msgstr "Работать только с перечисленными скобками/кавычками. Элементы длиной более одного символа должны разделяться пробелами. Односимвольные элементы могут не разделяться в начале фильтра."
+
+#: lazarusidestrconsts.dlgoptautobraceopen
+msgid "Automatically complete opening braces/quotes"
+msgstr "Автоматически завершать открывающие скобки/кавычки"
+
 #: lazarusidestrconsts.dlgoptdebugbackendeditdebuggerbackend
 msgid "Edit debugger backend"
 msgstr "Редактирование механизма отладки"
@@ -3605,7 +3630,7 @@ msgid "Color otherwise/else as case-label"
 msgstr "Подсвечивать Otherwise/Else так же, как метку Case"
 
 #: lazarusidestrconsts.dlgpasdeclaredtypeattrmode
-msgid "Extend of type-highlight in declarations"
+msgid "Extent of type-highlight in declarations"
 msgstr "Расширение подсветки типа в объявлениях"
 
 #: lazarusidestrconsts.dlgpasdeclaredtypeattrmodeident
@@ -3625,7 +3650,7 @@ msgid "Identifier and built-in (types/values)"
 msgstr "Идентификатор и встроенные (типы/значения)"
 
 #: lazarusidestrconsts.dlgpasdeclaredtypevaluemode
-msgid "Extend of initial-value-highlight in declarations"
+msgid "Extent of initial-value-highlight in declarations"
 msgstr "Расширение подсветки первоначального значения в объявлениях"
 
 #: lazarusidestrconsts.dlgpasdeclaredtypevaluemodeliteral
@@ -3645,8 +3670,8 @@ msgid "Highlight flow control statements (break, continue, exit) as keywords"
 msgstr "Подсвечивать операторы управления (break, continue, exit) так же, как ключевые слова"
 
 #: lazarusidestrconsts.dlgpasgenericparamattrmode
-msgid "Extend of initial-value-highlight in Generic/Specialize"
-msgstr "Расширение подсветки первоначального значения в Generic/Specialize"
+msgid "Extent of highlight in Generic-Constraint and Specialize-param"
+msgstr "Расширение подсветки ограничений в Generic и параметров в Specialize"
 
 #: lazarusidestrconsts.dlgpaskeywordsmarkup
 msgid "Markup (on caret)"
@@ -3659,6 +3684,10 @@ msgstr "Связанные ключевые слова"
 #: lazarusidestrconsts.dlgpaskeywordsoutline
 msgid "Outline"
 msgstr "Отображать контур"
+
+#: lazarusidestrconsts.dlgpasparamtypes
+msgid "Types and values in declarations and params"
+msgstr "Типы и значения в объявлениях и параметрах"
 
 #: lazarusidestrconsts.dlgpasprocnameattrmodegenandproc
 msgid "Generic and procedure name highlight"
@@ -5636,8 +5665,8 @@ msgid "Auto completion: on"
 msgstr "Автодополнение: включено"
 
 #: lazarusidestrconsts.lisautomarkup
-msgid "Markup and Matches"
-msgstr "Подсветка и соответствия"
+msgid "Pairs/Matches and Structure"
+msgstr "Пары/соответствия и структура"
 
 #: lazarusidestrconsts.lisautomatic
 msgctxt "lazarusidestrconsts.lisautomatic"
@@ -10029,6 +10058,7 @@ msgid "File where debug output is written to. Default is write to the console."
 msgstr "Файл, куда записывается вывод отладки. По умолчанию вывод отладки записывается в консоль."
 
 #: lazarusidestrconsts.lisfilter
+msgctxt "lazarusidestrconsts.lisfilter"
 msgid "Filter"
 msgstr "Фильтр"
 
@@ -14785,6 +14815,10 @@ msgstr "анализатор \"%s\": %s"
 #: lazarusidestrconsts.lisparsers
 msgid "Parsers:"
 msgstr "Анализаторы:"
+
+#: lazarusidestrconsts.lispascalhighlightopts
+msgid "Pascal highlight"
+msgstr "Подсветка Паскаля"
 
 #: lazarusidestrconsts.lispassingquiettwotimeswillp
 msgid "Passing --quiet two times will pass -vw-n-h-i-l-d-u-t-p-c-x- to the compiler."
